--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 MONGODB_URI = "mongodb+srv://sergetechno:stereox87@cluster0.vt9ht.mongodb.net"
-CLERK_WEBHOOK_SECRET = 'whsec_IX9OSEynGPwjKwV8IACMq58vjv16ehT3'
+CLERK_WEBHOOK_SECRET = "whsec_8HaRypZkXiLC0T+coU3a83lqn2bwFeAK"
