work with company controllers - 2 part

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,9 @@
+JWT_SECRET = "dev#secret"
+
 MONGODB_URI = "mongodb+srv://sergetechno:stereox87@cluster0.vt9ht.mongodb.net"
 CLERK_WEBHOOK_SECRET = "whsec_8HaRypZkXiLC0T+coU3a83lqn2bwFeAK"
+
+# cloudibary setup
+CLOUDINARY_NAME = "dnxuuvigj"
+CLOUDINARY_API_KEY = "147151642788518"
+CLOUDINARY_SECRET_KEY = "mpdy2T4coBxDkvbHN_8C0H4kDoY"
