--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,13 @@
 JWT_SECRET = "dev#secret"
 
 MONGODB_URI = "mongodb+srv://sergetechno:stereox87@cluster0.vt9ht.mongodb.net"
-CLERK_WEBHOOK_SECRET = "whsec_8HaRypZkXiLC0T+coU3a83lqn2bwFeAK"
 
 # cloudibary setup
 CLOUDINARY_NAME = "dnxuuvigj"
 CLOUDINARY_API_KEY = "147151642788518"
 CLOUDINARY_SECRET_KEY = "mpdy2T4coBxDkvbHN_8C0H4kDoY"
+
+# clerk setup
+CLERK_WEBHOOK_SECRET = "whsec_8HaRypZkXiLC0T+coU3a83lqn2bwFeAK"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bmVhcmJ5LXJhY2VyLTU3LmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_noDF3dGd4kG4MY2ZsO1YZ59Gd8YF6XV9E1SDmhEriK
