--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.3.41",
     "@sentry/node": "^8.48.0",
     "@sentry/profiling-node": "^8.48.0",
     "bcrypt": "^5.1.1",
